--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,13 @@ description = ""
 authors = ["Derek Wan <d.wan@icloud.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.9.7"
 beartype = "^0.9.1"
 
 [tool.poetry.dev-dependencies]
+flake8 = "^4.0.1"
+pytest = "^6.2.5"
+pytest-xdist = "^2.4.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
