--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ beartype = "^0.9.1"
 flake8 = "^4.0.1"
 pytest = "^6.2.5"
 pytest-xdist = "^2.4.0"
+ipython = "^7.29.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
