--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,10 @@ python = "^3.9.7"
 beartype = "^0.9.1"
 
 [tool.poetry.dev-dependencies]
+black = "^21.11b1"
 flake8 = "^4.0.1"
 pytest = "^6.2.5"
 pytest-xdist = "^2.4.0"
-ipython = "^7.29.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
